--- a/AsistenciaApp/Views/MainPage.xaml
+++ b/AsistenciaApp/Views/MainPage.xaml
@@ -31,9 +31,9 @@ AspectRatio="16:3">
                 <Grid ColumnSpacing="12"
 Grid.Row="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Spacing="8" Grid.Column="0" Margin="36,40,0,0">
@@ -52,40 +52,105 @@ Grid.Row="1">
 
                     <Grid Grid.Column="2">
 
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <StackPanel>
-                            <TextBlock Text="Información Institucional"
-                                    Style="{StaticResource SubtitleTextBlockStyle}" 
-                                    TextWrapping="Wrap" 
-                                    Margin="16,40,0,0"/>
+                            
 
                             <StackPanel Margin="16,16,0,0">
-                                <TextBlock Text="Nombre:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Nombre_Centro}" Style="{StaticResource BodyTextBlockStyle}"/>
+                                <TextBlock Text="Información Institucional"
+                                        Style="{StaticResource SubtitleTextBlockStyle}" 
+                                        TextWrapping="Wrap" 
+                                        Margin="0,40,0,24"/>
+                                
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Nombre:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                               Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Nombre_Centro}" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
 
-                                <TextBlock Text="Tipo de Institución:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Tipo_Institucion}" Style="{StaticResource BodyTextBlockStyle}"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Tipo de Institución:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                                Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Tipo_Institucion}" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
 
-                                <TextBlock Text="Dirección:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Direccion}" Style="{StaticResource BodyTextBlockStyle}"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Dirección:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                                Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Direccion}" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
 
-                                <TextBlock Text="Teléfono:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Telefono}" Style="{StaticResource BodyTextBlockStyle}"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Teléfono:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                                Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Telefono}" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
 
-                                <TextBlock Text="Correo Electrónico:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Correo}" Style="{StaticResource BodyTextBlockStyle}"/>
 
-                                <TextBlock Text="Descripción:" Style="{StaticResource BodyStrongTextBlockStyle}"/>
-                                <TextBlock Text="{Binding Centro_Educativo.Descripcion}" TextWrapping="Wrap" Style="{StaticResource BodyTextBlockStyle}"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Correo Electrónico:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                                Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Correo}" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="6*"/>
+                                    </Grid.ColumnDefinitions>
+                                    
+                                    <TextBlock Text="Descripción:" Style="{StaticResource BodyStrongTextBlockStyle}"
+                                                Margin="0,0,4,4"/>
+                                    <TextBlock Text="{Binding Centro_Educativo.Descripcion}" TextWrapping="Wrap" Style="{StaticResource BodyTextBlockStyle}"
+                                               Grid.Column="1"/>
+                                </Grid>
+                                
                             </StackPanel>
 
                         </StackPanel>
                         
                         <PersonPicture ProfilePicture="{Binding LogoImage}" 
-                                       Grid.Row="0"/>
+                                       Grid.Column="1"
+                                       Margin="24,0,36,0"/>
                     </Grid>
                    
                 </Grid>
